# prac

prac1/: .clang-format  CMakeLists.txt  run.sh
prac1/include/mafia/: core.h  logger.h  roles.h  shared_ptr.h
prac1/include/mafia/roles/: civilian.h  commissioner.h  doctor.h  hacker.h  journalist.h  kamikadze.h  mafia.h  maniac.h
prac1/src/: core.cpp  logger.cpp  main.cpp
prac1/src/roles/: civilian.cpp  commissioner.cpp  doctor.cpp  hacker.cpp  journalist.cpp  kamikadze.cpp  mafia.cpp  maniac.cpp
prac2/: .gitignore
prac2/docs/: PARALLEL_STUDY_RESULTS.md  SERIALIZATION_EXPLAINED.md  TESTING_INSTRUCTIONS.md
prac2/python/: plot_heatmap.py  plot_parallel_study.py
prac2/python/data_generator/: run_experiments.py
prac2/АИО/parallel/: CMakeLists.txt
prac2/АИО/parallel/include/cooling/: BoltzmannCooling.h
prac2/АИО/parallel/include/interfaces/: ICoolingSchedule.h  ISolution.h
prac2/АИО/parallel/include/mutation/: SchedulingMutation.h
prac2/АИО/parallel/include/parallel/: ProcessCoordinator.h
prac2/АИО/parallel/include/solution/: SchedulingSolution.h
prac2/АИО/parallel/include/util/: JobDataLoader.h
prac2/АИО/parallel/scripts/: run_parallel_study.sh
prac2/АИО/parallel/src/: main.cpp
prac2/АИО/parallel/src/annealing/: SimulatedAnnealing.cpp
prac2/АИО/parallel/src/cooling/: BoltzmannCooling.cpp  CauchyCooling.cpp  LogarithmicCooling.cpp
prac2/АИО/parallel/src/mutation/: SchedulingMutation.cpp
prac2/АИО/parallel/src/parallel/: ProcessCoordinator.cpp
prac2/АИО/parallel/src/solution/: SchedulingSolution.cpp
prac2/АИО/parallel/src/util/: JobDataLoader.cpp
prac2/АИО/sequential/: CMakeLists.txt
prac2/АИО/sequential/data/: jobs_1000.csv  jobs_10000.csv  test_metrics.csv
prac2/АИО/sequential/include/annealing/: SimulatedAnnealing.h
prac2/АИО/sequential/include/cooling/: CauchyCooling.h  CoolingFactory.h  LogarithmicCooling.h
prac2/АИО/sequential/include/interfaces/: ICoolingSchedule.h  IMutation.h
prac2/АИО/sequential/include/solution/: SchedulingSolution.h
prac2/АИО/sequential/scripts/: run_heatmap.sh
prac2/АИО/sequential/src/: main.cpp
prac2/АИО/sequential/src/annealing/: SimulatedAnnealing.cpp
prac2/АИО/sequential/src/cooling/: CauchyCooling.cpp  CoolingFactory.cpp  LogarithmicCooling.cpp
prac2/АИО/sequential/src/mutation/: SchedulingMutation.cpp
prac2/АИО/sequential/src/solution/: SchedulingSolution.cpp
prac2/АИО/sequential/src/util/: JobDataLoader.cpp
prac2/ТЗ/: АлгоритмИмитацииОтжига.txt
prac2/ФПЗ/: main.tex
prac3/: ТЗ.txt
prac3/app/: CMakeLists.txt  main.cpp
prac3/functionlib/: CMakeLists.txt
prac3/functionlib/include/functionlib/: FunctionFactory.h  FunctionOperators.h  GradientDescent.h  TFunction.h  functionlib_export.h
prac3/functionlib/src/: FunctionFactory.cpp  GradientDescent.cpp  Operators.cpp  TFunction.cpp
prac3/functionlib/src/functions/: CMakeLists.txt  ConstFunction.cpp  ConstFunction.h  ExpFunction.cpp  ExpFunction.h  IdentFunction.cpp  IdentFunction.h  PolynomialFunction.cpp  PolynomialFunction.h  PowerFunction.cpp  PowerFunction.h
prac3/functionlib/tests/: FunctionLibraryTests.cpp
